app/assets/stylesheets/widgets/masthead.scss
.miniRotatorNav {
  position: relative;
  top: 0;
  left: auto;
  z-index: 1000;
  // display: none;
  display: block;
  a {
    position: absolute;
    height: 56px;
    width: 43px;
    color: $white;
    top: -176px;
    cursor: pointer;
    background-image: image-url('gray_arrows.png');
    background-repeat: no-repeat;
    &.disabled {
      opacity: .4;
      filter: alpha(opacity = 40);
    }
  }
  .prev {
    background-position: left center;
    left: 0;
  }
  .next {
    background-position: right center;
    right: 0;
  }
  @include bp(wildcard-min, 768px) {
    // display: block;
  }
}

.miniRotator {
  position: relative;
  overflow: hidden;
  height: 285px;
  padding: 0;
  margin: 0;
  list-style: none;
  &.oldie .inner {
		word-break: break-all;
  }
  ul {
    width: 20000em;
    position: absolute;
    list-style: none;
    margin: 0;
    padding: 0;
  }
  li {
    // max-width: 100%;
    max-width: 266px;
    padding: 0;
    margin: 0 21px 0 0;
    list-style: none;
    float: left;
    overflow: hidden;
    img {
      position: relative;
      z-index: 1;
    }
    .item {
      display: block;
      height: 285px;
      position: relative;
      background: $cu-red;
    }
    @include bp(wildcard-min, 768px) {
    	// max-width: 266px;
    }
  }
  .caption {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -ms-box-sizing: border-box;
    box-sizing: border-box;
    background: $cu-red;
    top: 220px;
    position: absolute;
    -webkit-transition: all 1s;
    -moz-transition: all 1s;
    -ms-transition: all 1s;
    transition: all 1s;
    -webkit-transition-delay: 0.8s;
    -moz-transition-delay: 0.8s;
    -ms-transition-delay: 0.8s;
    transition-delay: 0.8s;
    z-index: 10;
    height: 100%;
    max-height: 215px;
    width: 100%;
    word-break: break-word;
    &:before {
      display: block;
      content: '';
      // background-image: image-url('pointy_new.png');
      background-repeat: no-repeat;
      background-position: center top;
      position: absolute;
      width: 100%;
      height: 16px;
      top: -16px;
      left: 0;
      z-index: 9;
      opacity: 1;
      -webkit-transition: all 0.3s;
      -moz-transition: all 0.3s;
      -ms-transition: all 0.3s;
      transition: all 0.3s;
    }
  }
  .item {
  	.inner {
	    position: absolute;
	    padding: 10px 25px 15px 25px;
	    left: 0;
	    top: 0;
	    -webkit-transition: all 0.8s;
	    -moz-transition: all 0.8s;
	    -ms-transition: all 0.8s;
	    transition: all 0.8s;
	    -webkit-transition-delay: 0s;
	    -moz-transition-delay: 0s;
	    -ms-transition-delay: 0s;
	    transition-delay: 0s;
	    transition-delay: 0s;
	    word-break: break-all;
	  }
	  .caption:hover {
	  	top: 50px;
		  -webkit-transition-delay: 0s;
		  -moz-transition-delay: 0s;
		  transition-delay: 0s;
	  	&:before {
		    opacity: 0;
		  }
		  .inner {
		    position: absolute;
		  }
		  .button {
		    opacity: 1;
		    -webkit-transition-delay: 1.3s;
		  }
		  .copy {
		    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
		    filter: alpha(opacity = 100);
		    opacity: 1;
		    -webkit-transition-delay: 1s;
		  }
	  }
  }
  .copy {
    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
    filter: alpha(opacity = 0);
    opacity: 0;
    -webkit-transition: opacity 0.8s;
    -moz-transition: opacity 0.8s;
    -ms-transition: opacity 0.8s;
    transition: opacity 0.8s;
    -webkit-transition-delay: 0.3s;
    -moz-transition-delay: 0.3s;
    -ms-transition-delay: 0.3s;
    transition-delay: 0.3s;
    font-size: 13px;
    margin: 10px 0 0 0;
    line-height: 1.5;
    word-break: normal;
  }
  .button {
    opacity: 0;
    -webkit-transition: opacity 0.8s;
    -moz-transition: opacity 0.8s;
    -ms-transition: opacity 0.8s;
    transition: opacity 0.8s;
    -webkit-transition-delay: 0s;
    -moz-transition-delay: 0s;
    -ms-transition-delay: 0s;
    transition-delay: 0s;
    background-color: $white;
    font-weight: 600;
    color: $cu-red;
    float: left;
    padding: 5px 10px 5px 10px;
    margin-top: 15px;
  }
  .title {
    font-family: 'futura-pt', arial, verdana, sans-serif;
    font-size: 18px;
    font-weight: 600;
    position: relative;
    top: -3px;
  }
}

.miniRotatorContainer {
  width: 266px;
  max-width: 1128px;
  margin: 0 auto;
  overflow: hidden;
  position: relative;
  z-index: 100;
  @include bp(wildcard-min, 600px) {
  	width: 533px;
  }
  @include bp(wildcard-min, 880px) {
  	width: 840px;
  }
  @include bp(wildcard-min, 1160px) {
  	width: 100%;
  }
}

.rotatorContainer .slide {
  max-height: 440px;
  min-height: 240px !important;
  padding-bottom: 15px;
  @include bp(wildcard-min, 786px) {
  	height: auto !important;
    min-height: 340px !important;
    padding-bottom: 0;
  }
}

.rounded-slider {
  .rotatorContainer {
    max-width: 1128px;
    max-height: 440px;
    background: $grey;
    margin: 0 auto;
  }
  .flexslider {
    overflow: hidden !important;
  }
  .flex-control-nav {
	  background: transparent;
	  text-align: right;
	  padding-right: 15px;
	  bottom: 25px !important;
	  box-sizing: border-box;
	  padding-right: 15px;
	  padding-top: 10px;
	  right: 0;
	  left: auto;
	  li {
	    display: inline-block;
	    float: none;
	    margin: 0 0 0 5px;
	    a {
	      width: 13px;
	      height: 13px;
	      background: image-url('pager_sprite.png') no-repeat;
	      background-position: -13px 0;
	      text-indent: 999px;
	      overflow: hidden;
	      &:hover, &.flex-active {
	        background-position: 0 0;
	      }
	    }
	  }
	  @include bp(wildcard-min, 768px) {
	  	position: absolute !important;
	    padding-top: 0;
	  }
	}
}

